# eventnavpp_datagen_pipeline

./: .gitignore  README.md  bag_reader.py  evt3_decoder.py  h5_visualizer.py
configs/: qa.yaml
docs/: PIPELINE_OVERVIEW.md
event_slam_ws/src/slam_rgbd_event/: CMakeLists.txt  package.xml
event_slam_ws/src/slam_rgbd_event/include/slam_rgbd_event/: event_landmark_extractor.hpp  visualization_node.hpp
event_slam_ws/src/slam_rgbd_event/launch/: event_converter.launch.py
event_slam_ws/src/slam_rgbd_event/scripts/: voxel_test_vis.py
event_slam_ws/src/slam_rgbd_event/src/: visualization_node.cpp
scripts/: batch_goal1.py  batch_overfit.py  build_dataset_index.py  check_rosbags.py  convert_all_rosbags.py  convert_and_label_goal.py  debug_evt3_timestamps.py  dropbox_download.py  dropbox_upload.py  h5_goal_picker_gui.py  h5_goal_picker_web.py  h5_to_video.py  print_h5_summary.py  resource_utils.py  run_goal_web_ui.py  validate_h5.py
